<resources>
    <string name="app_name">Rugby Score Keeper</string>
    <string name="addFivePoints">Add 5 Points</string>
    <string name="addThreePoints">Add 3 Points</string>
    <string name="addTwoPoints">Add 2 Points</string>
    <string name="resetGame">Reset Game</string>
    <string name="teamHome">Home</string>
    <string name="teamGuest">Guest</string>
    <string name="zero">0</string>
    <string name="scoringKeyTitle">Key for Rugby Scoring</string>
    <string name="scoringKey">Conversion = 2 Points\nPenalty Kick = 3 Points\n Drop Goal = 3 Points\nTry = 5 Points</string>
</resources>
